# wavelollies

./: NewProject.jucer  README.md  Wavelollies.jucer
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrogramComponent.cpp  SpectrogramComponent.h  dsp.cpp  dsp.h
Source/test/: test_e2e.cpp  test_e2e.py  test_e2e_spectrogram.py  test_fft.cpp  test_fft.py  test_interpolate.cpp  test_interpolate.py  test_window.cpp  test_window.py  utils.cpp  utils.h  utils.py
Source/test/test_fft/: test_fft.cpp
Source/test/test_interpolate/: test_interpolate.cpp
Source/test/test_window/: test_window.cpp
